[tool.poetry]
name = "banana-bot-client"
# non-empty README required for publishing to pypi
readme = "README.md"
version = "0.1.0"
description = "Automate Telegram game Banana Bot using Python"
authors = ["Alex Lau <alexlauwh@gmail.com>"]
packages = [{ include = "banana_bot_client" }]

[tool.poetry.dependencies]
python = "^3.10"
# python-dotenv = "^0.20.0"
requests = "^2.32.3"
loguru = "^0.7.2"
retry = "^0.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.10.0"
shellcheck-py = "^0.8.0.4"
ipython = "^8.25.0"

[tool.mypy]
exclude = "(env|venv|.env|.venv|temp|^migrations)"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.isort]
profile = "black"
skip = ["env", "venv", ".env", ".venv", "cache", "migrations"]

[tool.flake8]
max-line-length = 120
exclude = ["env", "venv", ".env", ".venv", "temp"]
ignore = ['W503']

[tool.black]
exclude = '^/migrations|.venv'

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "retry.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
